P-44: Fix burger items size on mobile

--- a/src/components/navbar/navbar-item/NavbarItem.scss
+++ b/src/components/navbar/navbar-item/NavbarItem.scss
@@ -15,7 +15,7 @@
         user-select: none;
 
         &.burger {
-            font-size: 11vh;
+            font-size: min(11vh, 15vw);
             margin-left: auto;
             margin-right: 2rem;
         }
